@@ -12,6 +12,7 @@ import org.springframework.web.bind.annotation.*;
 import javax.validation.Valid;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/products")
@@ -34,7 +35,7 @@ public class ProductController {
     public ResponseEntity<?> getAll() {
         List<Product> productList = productService.getAllProducts();
 
-        return ResponseEntity.ok(productList.stream().map(Records::from).toList());
+        return ResponseEntity.ok(productList.stream().map(Records::from).collect(Collectors.toList()));
     }
 
 }
